--- a/index.html
+++ b/index.html
@@ -4,23 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
   <title>Frontend Mentor | [Challenge Name Here]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
@@ -36,11 +21,10 @@
         <span>Monthly</span>
       </div>
     </div>
-
     <div class="card-container">
       <div class="card basic">
         <h2>Basic</h2>
-        <p class="price">&dollar;199.99</p>
+        <p class="price" id="basic-price">&dollar;199.99</p>
         <p>500 GB Storage</p>
         <p>2 Users Allowed</p>
         <p>Send up to 3 GB</p>
@@ -48,7 +32,7 @@
       </div>
       <div class="card professional">
         <h2>Professional</h2>
-        <p class="price">&dollar;249.99</p>
+        <p class="price" id="prefessional-price">&dollar;249.99</p>
         <p>500 GB Storage</p>
         <p>2 Users Allowed</p>
         <p>Send up to 3 GB</p>
@@ -56,27 +40,19 @@
       </div>
       <div class="card master">
         <h2>Master</h2>
-        <p class="price">&dollar;399.99</p>
+        <p class="price" id="master-price">&dollar;399.99</p>
         <p>2 TB Storage</p>
         <p>10 Users Allowed</p>
         <p>Send up to 20 GB</p>
         <button><a href="#">Learn more</a></button>
       </div>
     </div>
-
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://hannabjorling.netlify.app/">Hanna Björling</a>.
   </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
-
-<!-- 
-  &dollar;19.99
-  &dollar;24.99
-  &dollar;39.99
-
--->
