added last changes before deploy

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="content-box">
         <span>Annually</span>
         <label class="switch">
-          <input type="checkbox">
+          <input type="checkbox" role="switch">
           <span class="slider"></span>
         </label>
         <span>Monthly</span>
